Made the chapters follow the mouse & show current hover time + detect click time

--- a/src/index.css
+++ b/src/index.css
@@ -43,20 +43,11 @@ body,
   border-right: 8px solid transparent;
   position: absolute;
   top: 100%;
-  right: 0;
-  left: 0;
-  margin: auto;
-  width: 11px;
-}
-
-.arrow.left-1:after {
-  right: unset;
-  left: 15%;
-}
-
-.arrow.right-1:after {
-  left: unset;
-  right: 15%;
+  width: 0;
+  height: 0;
+  transform: translateX(-50%);
+  /* this variable is contolled with js */
+  left: var(--arrow-left, 50%);
 }
 
 .chapter:hover .arrow {
