Fixed an error when moving on the timeline aggressively "Maximum update depth exceeded"

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
 body,
 #root {
   min-height: 100vh;
+  overflow: hidden;
 }
 
 #root {
@@ -47,7 +48,7 @@ body,
   height: 0;
   transform: translateX(-50%);
   will-change: transform;
-  /* this variable is contolled with js */
+  /* this variable is controlled from react */
   left: var(--arrow-left, 50%);
 }
 
